fix: create method and error from linter
